[package]
authors = ["Saad Majeed <saad.majeed@scytalelabs.com>"]
edition = "2018"
name = "erc721"
version = "0.1.0"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../../utils/contract-utils" }
hex = "0.4.3"

[[bin]]
bench = false
doctest = false
name = "erc721"
path = "bin/erc721.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
